--- a/style.css
+++ b/style.css
@@ -105,3 +105,27 @@ h3{
     transform: none;
 }
 
+/* styling our form for score submit*/
+#finalScore{
+    text-align: center;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input{
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.0rem;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder{
+    color: #aaa;
+}
