--- a/game.css
+++ b/game.css
@@ -61,3 +61,22 @@
     background-color: #56a5eb;
     width: 0%;
 }
+
+/*loadeer*/
+#loader{
+    border: 1.6rem solid white;
+    border-radius: 50%;
+    border-top: 1.0rem solid #56a5eb;
+    width: 12rem;
+    height: 12rem;
+    animation: split 2s linear infinite;
+}
+
+@keyframes split{
+    0%{
+    transform: rotate(0deg);
+}
+    100%{
+    transform: rotate(360deg);       
+    }
+}
