--- a/style.css
+++ b/style.css
@@ -90,8 +90,22 @@ h3{
     text-decoration: none;
     color: #56a5eb;
     background-color: white;
+}
+.btn4 {
+     font-size: 1.75rem; 
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    padding: 1rem 0;
+    width: 20rem;
+    text-align: center;
+    border: 0.1rem solid #56a5eb;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: #56a5eb;
+    background-color: white;
     transform: translateX(28px);
 }
+
 
 .btn :hover {
     cursor: pointer;
