--- a/highscores.css
+++ b/highscores.css
@@ -17,6 +17,9 @@
     background:#fff;
     height:500px;
     width:500px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
 
 #highScoresList{
