--- a/game.css
+++ b/game.css
@@ -80,3 +80,81 @@
     transform: rotate(360deg);       
     }
 }
+/**resp**/
+/**timer**/
+
+#count{
+    box-sizing: border-box;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.tbtn{
+    background-color: #fff;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0.8rem 1.7rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #dc3545;
+}
+
+@media screen and (max-width: 600px) {
+    h1{
+        font-size: 2rem;
+    }
+    #count{
+        position: absolute;
+        bottom: 0px;
+        height: 80px;
+        background: rgb(252, 255, 255);
+        box-shadow: 0px  5px 15px #333;
+        border-radius: 30px 30px 10px 10px;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #count h1 {
+        height: 14px;
+        transform:translateY(70%);
+    }
+    .counter{
+        font-size:18px;
+        font-weight: bolder;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    #count{
+        position: absolute;
+        bottom: 0px;
+        height: 60px;
+        background: rgb(252, 255, 255);
+        box-shadow: 0px  5px 15px rgb(71, 70, 70);
+        border-radius: 30px 30px 10px 10px;
+        width: 600px;
+        
+    }
+    .tbtn{
+        font-size: 3rem;
+        transform: translateX(100%);
+    }
+    #count h1 {
+        height: 14px;
+        text-align: left;
+        transform: translateX(-80%);
+    }
+    .counter{
+        font-size:50px;
+        font-weight: bolder;
+    }
+}
+
