--- a/game.css
+++ b/game.css
@@ -155,7 +155,7 @@
         font-weight: 700;
         color: #dc3545;
         position: relative;
-        top: -15px;
+        margin-top: -20px;
     }
 }
 
