--- a/game.css
+++ b/game.css
@@ -143,7 +143,7 @@
         position: relative;
         top: -15px;
     }
-    .tbn{
+    .tbtn{
          /*added*/
         background-color: #fff;
         border-radius: 4px;
